kubernetes/apps/traefik/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app traefik
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-ingress-sso@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/affinity: "true"
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns/opnsense: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: A modern HTTP reverse proxy
    gethomepage.dev/group: Networking
    gethomepage.dev/icon: traefik
    gethomepage.dev/name: Traefik
    gethomepage.dev/weight: "10" # optional
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - &host traefik.techtales.io
      secretName: traefik-tls
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 8080
